@@ -131,6 +131,7 @@ Misc:
  - Libretro: Reduce rumble callbacks
  - Debugger: Minor text fixes
  - Qt: Debugger console history
+ - Qt: Detect presence of GL_ARB_framebuffer_object
 
 0.7 beta 1: (2018-09-24)
 - Initial beta for 0.7
